examples/valid/get_example_com2.reqlang
#!/usr/bin/env reqlang

[envs]

---
GET http://example.com HTTP/1.1
