examples/invalid/illegal_request_header_host.reqlang
#!/usr/bin/env reqlang
---
GET / HTTP/1.1
host: https://example.com

---
HTTP/1.1 200 OK

---
vars = []
secrets = []

[envs]

[prompts]
---
